# tribe-protocol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  Readme.md  package.json  pnpm-lock.yaml
migrations/: deploy.ts
programs/app-key-registry/: Cargo.toml
programs/app-key-registry/src/: errors.rs  events.rs  lib.rs
programs/app-key-registry/src/instructions/: add_key.rs  mod.rs  revoke_key.rs  rotate_key.rs
programs/app-key-registry/src/state/: app_key_record.rs  mod.rs
programs/channel-registry/: Cargo.toml
programs/channel-registry/src/: errors.rs  events.rs  lib.rs
programs/channel-registry/src/instructions/: mod.rs  register_channel.rs  transfer_channel.rs  update_channel.rs
programs/channel-registry/src/state/: channel_record.rs  mod.rs
programs/crowdfund-registry/: Cargo.toml
programs/crowdfund-registry/src/: errors.rs  events.rs  lib.rs
programs/crowdfund-registry/src/instructions/: claim_funds.rs  create_crowdfund.rs  init_creator_state.rs  mod.rs  pledge.rs  refund.rs
programs/crowdfund-registry/src/state/: creator_crowdfund_state.rs  crowdfund.rs  mod.rs  pledge.rs
programs/event-registry/: Cargo.toml
programs/event-registry/src/: errors.rs  events.rs  lib.rs
programs/event-registry/src/instructions/: create_event.rs  init_creator_state.rs  mod.rs  rsvp.rs  update_rsvp.rs
programs/event-registry/src/state/: creator_event_state.rs  event.rs  mod.rs  rsvp.rs
programs/fid-registry/: Cargo.toml
programs/fid-registry/src/: errors.rs  events.rs  lib.rs
programs/fid-registry/src/instructions/: change_recovery.rs  initialize.rs  recover.rs  register.rs  transfer.rs
programs/fid-registry/src/state/: fid_record.rs  global_state.rs  mod.rs
programs/hub-registry/: Cargo.toml
programs/hub-registry/src/: errors.rs  events.rs  lib.rs
programs/hub-registry/src/instructions/: deactivate_hub.rs  heartbeat.rs  mod.rs  register_hub.rs  update_hub.rs
programs/hub-registry/src/state/: hub_record.rs  mod.rs
programs/karma-registry/: Cargo.toml
programs/karma-registry/src/: errors.rs  events.rs  lib.rs
programs/karma-registry/src/instructions/: init_karma_account.rs  mod.rs  record_task_completed.rs  record_tip_received.rs
programs/karma-registry/src/state/: karma_account.rs  karma_proof.rs  mod.rs
programs/poll-registry/: Cargo.toml
programs/poll-registry/src/: errors.rs  events.rs  lib.rs
programs/poll-registry/src/instructions/: create_poll.rs  init_creator_state.rs  mod.rs  vote.rs
programs/poll-registry/src/state/: creator_poll_state.rs  mod.rs  poll.rs  vote.rs
programs/social-graph/: Cargo.toml
programs/social-graph/src/: errors.rs  events.rs  lib.rs
programs/social-graph/src/instructions/: follow.rs  follow_delegated.rs  init_profile.rs  init_profile_delegated.rs  init_sequencer.rs  mod.rs  unfollow.rs  unfollow_delegated.rs  update_sequencer.rs
programs/social-graph/src/state/: link.rs  mod.rs  sequencer_config.rs  social_profile.rs
programs/task-registry/: Cargo.toml
programs/task-registry/src/: errors.rs  events.rs  lib.rs
programs/task-registry/src/instructions/: cancel_task.rs  claim_task.rs  complete_task.rs  create_task.rs  init_creator_state.rs  mod.rs
programs/task-registry/src/state/: creator_task_state.rs  mod.rs  task.rs
programs/tid-registry/: Cargo.toml
programs/tid-registry/src/: errors.rs  events.rs  lib.rs
programs/tid-registry/src/instructions/: change_recovery.rs  initialize.rs  mod.rs  recover.rs  register.rs  transfer.rs
programs/tid-registry/src/state/: global_state.rs  mod.rs  tid_record.rs
programs/tip-registry/: Cargo.toml
programs/tip-registry/src/: errors.rs  events.rs  lib.rs
programs/tip-registry/src/instructions/: init_sender_state.rs  mod.rs  send_tip.rs
programs/tip-registry/src/state/: mod.rs  sender_tip_state.rs  tip_record.rs
programs/username-registry/: Cargo.toml
programs/username-registry/src/: errors.rs  events.rs  lib.rs
programs/username-registry/src/instructions/: mod.rs  register.rs  release.rs  renew.rs  transfer.rs
programs/username-registry/src/state/: mod.rs  username_record.rs
scripts/: rotate-sequencer.ts
tests/: tribe-protocol.ts
