[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
# Pin to avoid edition2024 incompatibility with Solana platform-tools Cargo 1.84
constant_time_eq = "=0.3.1"
blake3 = "=1.5.4"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
