[package]
name = "event-registry"
version = "0.1.0"
description = "On-chain events with one-RSVP-per-TID for the Tribe protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "event_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
