[package]
name = "poll-registry"
version = "0.1.0"
description = "On-chain polls with vote-uniqueness for the Tribe protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poll_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
