[package]
name = "social-graph"
version = "0.1.0"
description = "Tribe Protocol — Social Graph Program (PDA-per-relationship)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "social_graph"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
