[package]
name = "task-registry"
version = "0.1.0"
description = "On-chain local tasks with optional reward escrow for the Tribe protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "task_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
