[package]
name = "tid-registry"
version = "0.1.0"
description = "Tribe Protocol — TID Registry Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tid_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
