[package]
name = "tip-registry"
version = "0.1.0"
description = "On-chain tip records for the Tribe decentralized social protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
