[package]
name = "username-registry"
version = "0.1.0"
description = "Tribe Protocol — Username Registry Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "username_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
